--- a/peer_review.html
+++ b/peer_review.html
@@ -13,7 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
-<tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2932643005'>Rename avatar_url to icon_url</a></td><td><a href='https://codereview.chromium.org/user/Ravi Nanjundappa'>nravi.n</a></td><td>newbie</td></tr>
+<tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2931033004'>[Payments] fix a bugs which</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
+<tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2931033004'>[Payments] fix a bugs which</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2895273002'>Unified the use of BufferToTextureTargetMap for all the Processes</a></td><td><a href='https://codereview.chromium.org/user/sujith'>sujiths.s</a></td><td>author</td></tr>
 <tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2925693003'>Making CSD ReportType enum consistent.</a></td><td><a href='https://codereview.chromium.org/user/nikhil.sahni'>nikhil.sahni</a></td><td>newbie</td></tr>
 <tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2919343007'>Check |errorCode| of translate.js and notify to Browser</a></td><td><a href='https://codereview.chromium.org/user/Gaja'>gajendra.n</a></td><td>author</td></tr>
