--- a/peer_review.html
+++ b/peer_review.html
@@ -13,10 +13,10 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-06-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2931033004'>[Payments] fix the bug which disappear card icon list.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
+<tr><td>2017-06-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2931033004'>[Payments] fix the bug which disappear card icon list.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-06-10</td><td>chromium</td><td><a href='https://codereview.chromium.org/2914173002'>Removing file_thread_task_runner parameter from SerialIoHandler</a></td><td><a href='https://codereview.chromium.org/user/sujith'>sujiths.s</a></td><td>author</td></tr>
 <tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2925693003'>Making CSD ReportType enum consistent.</a></td><td><a href='https://codereview.chromium.org/user/nikhil.sahni'>nikhil.sahni</a></td><td>newbie</td></tr>
-<tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2931033004'>[Payments] fix a bugs which</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
-<tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2931033004'>[Payments] fix a bugs which</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2895273002'>Unified the use of BufferToTextureTargetMap for all the Processes</a></td><td><a href='https://codereview.chromium.org/user/sujith'>sujiths.s</a></td><td>author</td></tr>
 <tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2919343007'>Check |errorCode| of translate.js and notify to Browser</a></td><td><a href='https://codereview.chromium.org/user/Gaja'>gajendra.n</a></td><td>author</td></tr>
 <tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2909473002'>Moved DummyFrameOwner class to WeblocalFrameimpl.cpp</a></td><td><a href='https://codereview.chromium.org/user/Uzair'>uzair.jaleel</a></td><td>newbie</td></tr>
