--- a/reviews.html
+++ b/reviews.html
@@ -13,11 +13,11 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-06-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2931033004'>[Payments] fix the bug which disappear card icon list.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
+<tr><td>2017-06-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2931033004'>[Payments] fix the bug which disappear card icon list.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-06-10</td><td>chromium</td><td><a href='https://codereview.chromium.org/2914173002'>Removing file_thread_task_runner parameter from SerialIoHandler</a></td><td><a href='https://codereview.chromium.org/user/sujith'>sujiths.s</a></td><td>author</td></tr>
 <tr><td>2017-06-10</td><td>chromium</td><td><a href='https://codereview.chromium.org/2839993002'>[Android] Adding Smart GO/NEXT feature in Chrome</a></td><td><a href='https://codereview.chromium.org/user/AKVT'>ajith.v</a></td><td>committer</td></tr>
 <tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2925693003'>Making CSD ReportType enum consistent.</a></td><td><a href='https://codereview.chromium.org/user/nikhil.sahni'>nikhil.sahni</a></td><td>newbie</td></tr>
-<tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2931033004'>[Payments] fix a bugs which</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
-<tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2931033004'>[Payments] fix a bugs which</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2895273002'>Unified the use of BufferToTextureTargetMap for all the Processes</a></td><td><a href='https://codereview.chromium.org/user/sujith'>sujiths.s</a></td><td>author</td></tr>
 <tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2911643002'>Create BUILD.gn files for //media/filters.</a></td><td><a href='https://codereview.chromium.org/user/a.suchit'>a.suchit</a></td><td>committer</td></tr>
 <tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2926023002'>[TRY-BOT-CHECK] Adding support for Smart GO NEXT feature in Android Chrome</a></td><td><a href='https://codereview.chromium.org/user/AKVT'>ajith.v</a></td><td>committer</td></tr>
