--- a/reviews.html
+++ b/reviews.html
@@ -13,7 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
-<tr><td>2017-06-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2934703002'>Replace sequence with FrozenArray in PaymentRequestEvent.idl.</a></td><td><a href='https://codereview.chromium.org/user/zino'>jinho.bang</a></td><td>committer</td></tr>
+<tr><td>2017-06-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2934703002'>PaymentHandler: Replace sequence with FrozenArray in PaymentRequestEvent.idl.</a></td><td><a href='https://codereview.chromium.org/user/zino'>jinho.bang</a></td><td>committer</td></tr>
+<tr><td>2017-06-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2933023002'>PaymentHandler: PaymentRequestEvent.total should be |any| type.</a></td><td><a href='https://codereview.chromium.org/user/zino'>jinho.bang</a></td><td>committer</td></tr>
 <tr><td>2017-06-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2931033004'>[Payments] fix the bug which disappear card icon list.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-06-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2931033004'>[Payments] fix the bug which disappear card icon list.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-06-10</td><td>chromium</td><td><a href='https://codereview.chromium.org/2914173002'>Removing file_thread_task_runner parameter from SerialIoHandler</a></td><td><a href='https://codereview.chromium.org/user/sujith'>sujiths.s</a></td><td>author</td></tr>
