--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-06-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2926383003'>Use ContainsValue() instead of std::find() in ui/aura, ui/display and ui/events</a></td><td>tripta.g</td></tr>
+<tr><td>2017-06-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2926793002'>Use ContainsValue() instead of std::find() in ui/wm and ui/message_center</a></td><td>tripta.g</td></tr>
 <tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2912383002'>Add support for Element.getAttributeNames()</a></td><td>shanmuga.m</td></tr>
 <tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2930883002'>[geometry] replace m12 with m21 when transform DOMPoint from DOMMatrix.</a></td><td>hs1217.lee</td></tr>
 <tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2924013002'>Rename CreateDragImage to CreateDragImageForFrame to avoid name conflicts</a></td><td>tanvir.rizvi</td></tr>
