--- a/reviews_non_committers.html
+++ b/reviews_non_committers.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-06-13</td><td>chromium</td><td><a href='https://codereview.chromium.org/2940583002'>Move drag related functionality out of LocalFrame</a></td><td><a href='https://codereview.chromium.org/user/tanvir'>tanvir.rizvi</a></td><td>author</td></tr>
 <tr><td>2017-06-12</td><td>chromium</td><td><a href='https://codereview.chromium.org/2925693003'>Making CSD ReportType enum consistent.</a></td><td><a href='https://codereview.chromium.org/user/nikhil.sahni'>nikhil.sahni</a></td><td>newbie</td></tr>
 <tr><td>2017-06-12</td><td>chromium</td><td><a href='https://codereview.chromium.org/2895273002'>Unified the use of BufferToTextureTargetMap for all the Processes</a></td><td><a href='https://codereview.chromium.org/user/sujith'>sujiths.s</a></td><td>author</td></tr>
 <tr><td>2017-06-12</td><td>chromium</td><td><a href='https://codereview.chromium.org/2925783002'>[XMLHttpRequest] Filter forbidden response headers.</a></td><td><a href='https://codereview.chromium.org/user/Raveendra Karu'>r.karu</a></td><td>newbie</td></tr>
