--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-06-15</td><td>chromium</td><td><a href='https://codereview.chromium.org/2907143002'>Remove unnecessary decoded frame size overflow check</a></td><td>nagarajan.n</td></tr>
 <tr><td>2017-06-14</td><td>chromium</td><td><a href='https://codereview.chromium.org/2933743002'>Move chrome/browser/manifest to content/browser.</a></td><td>jinho.bang</td></tr>
 <tr><td>2017-06-14</td><td>chromium</td><td><a href='https://codereview.chromium.org/2934043002'>Use ContainsValue() instead of std::find() in chrome/browser/chromeos</a></td><td>tripta.g</td></tr>
 <tr><td>2017-06-13</td><td>chromium</td><td><a href='https://codereview.chromium.org/2930273002'>Use ContainsValue() instead of std::find() in ui/accessibility, ui/gl and ui/ozone</a></td><td>tripta.g</td></tr>
