--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-06-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2914173002'>Removed the use of file_thread_task_runner across</a></td><td>sujiths.s</td></tr>
 <tr><td>2017-06-22</td><td>chromium</td><td><a href='https://codereview.chromium.org/2950803002'>Use ContainsValue() instead of std::find() in chrome/browser/ and chrome/test/</a></td><td>tripta.g</td></tr>
 <tr><td>2017-06-20</td><td>chromium</td><td><a href='https://codereview.chromium.org/2938413005'>GeometryInterface: Enable GeometryInterfaces by default.</a></td><td>jinho.bang</td></tr>
 <tr><td>2017-06-20</td><td>chromium</td><td><a href='https://codereview.chromium.org/2950793002'>Move drag related functions present in LocalFrame.cpp to correct files.</a></td><td>tanvir.rizvi</td></tr>
