--- a/reviews_non_committers.html
+++ b/reviews_non_committers.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-06-25</td><td>chromium</td><td><a href='https://codereview.chromium.org/2954843002'>Fix upgrading built-in custom elements</a></td><td><a href='https://codereview.chromium.org/user/Anton Obzhirov'>a.obzhirov</a></td><td>author</td></tr>
 <tr><td>2017-06-24</td><td>chromium</td><td><a href='https://codereview.chromium.org/2937043002'>CSS Properties &amp; Values API: Compute initial values for transfrom-list type.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-06-24</td><td>chromium</td><td><a href='https://codereview.chromium.org/2937043002'>CSS Properties &amp; Values API: Compute initial values for transfrom-list type.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-06-23</td><td>chromium</td><td><a href='https://codereview.chromium.org/2953503004'>Transfer ownership of InputMethodController from LocalFrame to DOMWindow</a></td><td><a href='https://codereview.chromium.org/user/tanvir'>tanvir.rizvi</a></td><td>author</td></tr>
