--- a/reviews_non_committers.html
+++ b/reviews_non_committers.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-07-02</td><td>chromium</td><td><a href='https://codereview.chromium.org/2970623002'>[WIP] Compute the linkMatchType inside the CSSSelectorParser.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
+<tr><td>2017-07-02</td><td>chromium</td><td><a href='https://codereview.chromium.org/2970623002'>[WIP] Compute the linkMatchType inside the CSSSelectorParser.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-07-02</td><td>chromium</td><td><a href='https://codereview.chromium.org/2967773002'>[WIP] CSSMatrixComponentOptions</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-07-02</td><td>chromium</td><td><a href='https://codereview.chromium.org/2967773002'>[WIP] CSSMatrixComponentOptions</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-07-01</td><td>chromium</td><td><a href='https://codereview.chromium.org/2895273002'>Unified the use of BufferToTextureTargetMap for all the Processes</a></td><td><a href='https://codereview.chromium.org/user/sujith'>sujiths.s</a></td><td>author</td></tr>
