--- a/reviews.html
+++ b/reviews.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-07-04</td><td>chromium</td><td><a href='https://codereview.chromium.org/2967893002'>Display arrow cursor instead of i-beam when selection is not present</a></td><td><a href='https://codereview.chromium.org/user/tanvir'>tanvir.rizvi</a></td><td>author</td></tr>
 <tr><td>2017-07-04</td><td>chromium</td><td><a href='https://codereview.chromium.org/2919343007'>Check |errorCode| of translate.js and notify to Browser</a></td><td><a href='https://codereview.chromium.org/user/Gaja'>gajendra.n</a></td><td>author</td></tr>
 <tr><td>2017-07-03</td><td>chromium</td><td><a href='https://codereview.chromium.org/2926023002'>[TRY-BOT-CHECK] Adding support for Smart GO NEXT feature in Android Chrome</a></td><td><a href='https://codereview.chromium.org/user/AKVT'>ajith.v</a></td><td>committer</td></tr>
 <tr><td>2017-07-03</td><td>chromium</td><td><a href='https://codereview.chromium.org/2963173004'>document.registerElement() rejects a valid unregistered type with U+212A.</a></td><td><a href='https://codereview.chromium.org/user/nikhil.sahni'>nikhil.sahni</a></td><td>newbie</td></tr>
