--- a/reviews_non_committers.html
+++ b/reviews_non_committers.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-07-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2979493002'>Use ContainsValue() instead of std::find() in components/..</a></td><td><a href='https://codereview.chromium.org/user/deejay'>djmix.kim</a></td><td>author</td></tr>
+<tr><td>2017-07-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2972333002'>autofill : Use ContainsValue() instead of std::find() in components/autofill</a></td><td><a href='https://codereview.chromium.org/user/deejay'>djmix.kim</a></td><td>author</td></tr>
 <tr><td>2017-07-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2970623002'>[WIP] Compute the linkMatchType inside the CSSSelectorParser.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-07-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2970623002'>[WIP] Compute the linkMatchType inside the CSSSelectorParser.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-07-06</td><td>chromium</td><td><a href='https://codereview.chromium.org/2967893002'>Display arrow cursor instead of i-beam when selection is not present</a></td><td><a href='https://codereview.chromium.org/user/tanvir'>tanvir.rizvi</a></td><td>author</td></tr>
