--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-07-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2972333002'>autofill : Use ContainsValue() instead of std::find() in components/autofill</a></td><td>djmix.kim</td></tr>
 <tr><td>2017-07-06</td><td>chromium</td><td><a href='https://codereview.chromium.org/2961033002'>Use ContainsValue() instead of std::find() in chrome/browser/extensions</a></td><td>tripta.g</td></tr>
 <tr><td>2017-07-06</td><td>chromium</td><td><a href='https://codereview.chromium.org/2895273002'>Unified the use of BufferToTextureTargetMap for all the Processes</a></td><td>sujiths.s</td></tr>
 <tr><td>2017-07-06</td><td>chromium</td><td><a href='https://codereview.chromium.org/2963173004'>document.registerElement() rejects a valid unregistered type with U+212A.</a></td><td>nikhil.sahni</td></tr>
